--- a/src/screens/userLoggedIn/userLoggedIn.css
+++ b/src/screens/userLoggedIn/userLoggedIn.css
@@ -1,3 +1,9 @@
 .userLoggedIn .content {
   display: flex;
 }
+
+.userLoggedIn {
+  height: 100vh;
+  width: 100vw;
+  overflow: hidden;
+}
